--- a/www/css/colour.css
+++ b/www/css/colour.css
@@ -3,15 +3,32 @@
 }
 
 a:link {
-    text-decoration: none;
-    color: #a0a0a0;
+  text-decoration: none;
+  color: #a0a0a0;
 }
 
 h1{
   color: #505153;
 }
 
+h1 a:visited{
+  color: #505153
+}
+
+h1 a:hover{
+  color: #505153
+}
+
 nav{
   border-left: 3px solid #a0a0a0;
   padding-left: 100px;
+}
+
+a:visited{
+  color: #a0a0a0;
+}
+
+a:hover{
+  color: black;
+  text-decoration: none;
 }
