--- a/www/css/type.css
+++ b/www/css/type.css
@@ -190,6 +190,14 @@ small, .milli {
   padding-top: 1.3rem;
 }
 
+.pad-left, .pad-l {
+  padding-left: 1.3rem;
+}
+
+.pad-left-2, .pad-l-2 {
+  padding-left: 2.6rem;
+}
+
 .pad-bottom, .pad-b {
   padding-bottom: 1.3rem;
 }
