--- a/www/css/colour.css
+++ b/www/css/colour.css
@@ -19,11 +19,6 @@ h1 a:hover{
   color: #505153
 }
 
-nav{
-  border-left: 3px solid #a0a0a0;
-  padding-left: 100px;
-}
-
 a:visited{
   color: #a0a0a0;
 }
@@ -31,4 +26,16 @@ a:visited{
 a:hover{
   color: black;
   text-decoration: none;
+}
+
+.hero-image{
+  color: white;
+}
+
+.body-copy-colour{
+  color: #a0a0a0;
+}
+
+.title-colour{
+  color: #505153;
 }
