Completed features bucket wireframe

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -23,7 +23,7 @@ body{
 }
 
 .hero-image{
-    background-image: url("http://freebigpictures.com/wp-content/uploads/2009/09/dew-grass.jpg");
+    background-image: url("http://placehold.it/350x150");
     background-size: cover;
 }
 
