--- a/www/css/colour.css
+++ b/www/css/colour.css
@@ -34,10 +34,12 @@ a:hover{
 
 .body-copy-colour{
   color: #a0a0a0;
-  width: 180px;
-  margin: 0 auto;
 }
 
 .title-colour{
   color: #505153;
+}
+
+.bucket-colour-1{
+  background-color: #f5f5f5;
 }
