--- a/css/main.css
+++ b/css/main.css
@@ -32,36 +32,13 @@ body{
   padding-bottom: 6rem;
 }
 
-.bucket-padding{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.hero-text{
-  font-size: 3rem;
-}
-
-.divider{
-  border-left: 3px solid #a0a0a0;
-  padding-left: 100px;
-}
-
-.login{
-  text-align: right;
-}
-
 .text-width-1{
   width: 180px;
   margin: 0 auto;
 }
 
 .text-width-2{
-  width: 400px;
-  margin: 0 auto;
-}
-
-.text-width-3{
-  width: 650px;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -77,11 +54,29 @@ body{
 
 .bucket-box{
   position:relative;
+  height: 400px;
 }
 
-.v-images{
+.vertical-alignment{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media only screen and (min-width: 0em){
+  .hero-text{
+    font-size: 1rem;
+  }
+
+@media only screen and (min-width: 38em){
+  .hero-text{
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 60em){
+  .hero-text{
+    font-size: 3rem;
+  }
 }
