--- a/css/colour.css
+++ b/css/colour.css
@@ -32,6 +32,14 @@ a:hover{
   color: white;
 }
 
+.hero-image-2{
+  color: white;
+}
+
+.hero-image-3{
+  color: white;
+}
+
 .body-copy-colour{
   color: #a0a0a0;
 }
