--- a/css/colour.css
+++ b/css/colour.css
@@ -16,7 +16,7 @@ h1 a:visited{
 }
 
 h1 a:hover{
-  color: #843d6b;
+  color: black;
 }
 
 a:visited{
@@ -24,7 +24,7 @@ a:visited{
 }
 
 a:hover{
-  color: #843d6b;
+  color: black;
   text-decoration: none;
 }
 
@@ -38,10 +38,6 @@ a:hover{
 
 .hero-image-3{
   color: white;
-}
-
-.body-copy-colour{
-  color: #a0a0a0;
 }
 
 .title-colour{
@@ -65,9 +61,5 @@ a:hover{
 }
 
 .background-purple{
-  background-color: #34182a;
-}
-
-.background-green{
-  background-color: #5ad0b7;
+  background-color: #00dfae;
 }
