--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body{
     background-size: cover;
     padding-top: 6rem;
     padding-bottom: 6rem;
+    background-color: black;
 }
 
 .hero-image-2{
@@ -26,6 +27,7 @@ body{
     background-size: cover;
     padding-top: 6rem;
     padding-bottom: 6rem;
+    background-color: black;
 }
 
 .hero-image-3{
@@ -33,6 +35,7 @@ body{
     background-size: cover;
     padding-top: 6rem;
     padding-bottom: 6rem;
+    background-color: black;
 }
 
 .text-width-1{
@@ -46,13 +49,13 @@ body{
 }
 
 .action-button{
-  background: #34182a;
+  background: #00dfae;
   padding: 10px 20px 10px 20px;
 }
 
 .action-button:hover {
-  background: #843d6b;
-  color: white;
+  background: #00dfae;
+  color: black;
 }
 
 .bucket-box{
