--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,32 @@ body{
   transform: translate(-50%, -50%);
 }
 
+label{
+  display: block;
+  cursor: pointer;
+}
+
+input + label{
+  display: inline;
+}
+
+input{
+  background-color: #f5f5f5;
+}
+
+button{
+  width: 225px;
+  border: 3px solid black;
+  background-color: #00dfae;
+  cursor: pointer;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+fieldset {
+    border: 0;
+}
+
 @media only screen and (min-width: 1em){
   .hero-text{
     font-size: 1rem;
