--- a/css/main.css
+++ b/css/main.css
@@ -81,9 +81,11 @@ input + label{
 
 input{
   background-color: #f5f5f5;
+  border-radius: 2px;
 }
 
 button{
+  border-radius: 25px;
   width: 225px;
   border: 3px solid black;
   background-color: #00dfae;
